fix: silly consistency nit

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -85,7 +85,7 @@ const underline = "decoration-gray-200 underline underline-offset-4"
           target="_blank"
           class:list={[underline, "hover:no-underline"]}>Vasava website</a
         >, and&nbsp;complex, technical ones like <a
-          href="https://www.wikiparfum.com"
+          href="https://wikiparfum.com"
           target="_blank"
           class:list={[underline, "hover:no-underline"]}>Wikiparfum</a
         >.
