--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -98,7 +98,7 @@ const underline = "decoration-gray-200 underline underline-offset-4"
         > building creative web experiences.
       </p>
       <p>
-        I see myself as designer at heart and enjoy crafting software with a
+        I see myself as a designer at heart and enjoy crafting software with a
         distinctive visual sensibility.
       </p>
     </article>
