chore: add adce award

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,21 +33,21 @@ const places = [
     year: [2019, 2020],
     href: "https://bold.bz",
   },
-  // {
-  //   name: "Seeway",
-  //   role: "Graphic Design Student",
-  //   year: [2018, 2020],
-  // },
 ]
 
 const awards = [
   {
-    name: "Laus Award (Bronze)",
+    name: "ADCE (Silver)",
+    year: 2024,
+    href: "https://www.oneclub.org/adceurope/showcase/2024/-item/55267",
+  },
+  {
+    name: "Laus (Bronze)",
     year: 2024,
     href: "https://adg-fad.org/es/laus/proyecto/vicio-invierte-donde-invierten-los-que-invierten",
   },
   {
-    name: "Laus Award (Gold)",
+    name: "Laus (Gold)",
     year: 2023,
     href: "https://adg-fad.org/es/laus/proyecto/vicio-0",
   },
